updated with changes from ryan's comments

--- a/100hr_DFM_algorithm.ipynb
+++ b/100hr_DFM_algorithm.ipynb
@@ -6,22 +6,32 @@
    "source": [
     "** INTRODUCTION ** \n",
     "\n",
-    "We have been writing a paper on climate change impacts on snowpack and fire risk in the western United States using simulations from the Integrated Scenarios project. The domain for the paper includes five mountain ranges (Cascades, Sierra Nevada, Northern Rockies, Southern Rockies, White Mountains) and six lowland regions (Missouri Basin, Coastal North, Coastal South, Lower Colorado, Great Basin, and Northwest Interior). To understand climate impacts on fire and to tie this into changes in snowpack, we have been looking at dead fuel moisture. Our goal is to compute 100-hr and 1000-hr time lags of dead fuel moisture (DFM) and to look at changes in DFM between the 2020s and 2080s. "
+    "We have been writing a paper on climate change impacts on snowpack and fire risk in the western United States using simulations from the Integrated Scenarios project. The domain for the paper includes five mountain ranges (Cascades, Sierra Nevada, Northern Rockies, Southern Rockies, White Mountains) and six lowland regions (Missouri Basin, Coastal North, Coastal South, Lower Colorado, Great Basin, and Northwest Interior). To understand climate impacts on fire and to tie this into changes in snowpack, we have been looking at dead fuel moisture. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** ASSUMPTIONS ** \n",
+    "** OBJECTIVE ** \n",
     "\n",
-    "These are necessary because available archived data from Integrated Scenarios includes maximum and minimum temperature, specific humidity, and precipitation (and not relative humidity). \n",
+    "Our goal is to compute 100-hr and 1000-hr time lags of dead fuel moisture (DFM) and to look at changes in DFM between the historical (1970-1999) and future (2020s, 2050s, and 2080s) periods using inputs from the Integrated Scenarios archive. Relevant inputs available over the western US at a 1/16th degree resolution include daily Tmin, Tmax, specific humidity and precipitation for 1950-2005 and 2006-2100 (RCP 4.5 and 8.5) for 10 GCMs. \n",
     "\n",
-    "1. RH. Deriving RH from specific humidity (approximating the mixing ratio w as q). \n",
-    "2. Climate class. The NFDRS method uses climate class to approximate a precipitation rate, which is 0.25 in/hr for climate classes 1 and 2 and 0.05 in/hr for climate classes 3 and 4. The amount of variability in daily DFM is very dependent on this. The precip rate is then used to determine the precip duration, which cannot exceed 8 hours if this method is used. \n",
-    "3. SATVPD. Using saturation vapor pressure evaluated at the average daily temperature rather than observed temperature (dry-bulb temperature of afternoon observation time). \n",
-    "4. AMBVP. Using average RH (derived from q) rather than observed RH. \n",
-    "5. EMC. Using Tmin for dew point temperature and RH (derived from q). "
+    "Although we have computed the 100-hr time lag of dead fuel moisture, the correlation with DFM from the UI Metdata archive is not good (see below). We have been going through each step of the algorithm implementation to understand where our algorithm differs from that used for calculating DFM in the UI Metdata archive. The goal of the algorithm description herein is to discern where our algorithm differs and what we can look into to improve it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** METHOD **\n",
+    "\n",
+    "The method used here is outlined in the National Fire Danger Rating System (NFDRS): basic equations article. It can be found here: http://www.fs.fed.us/psw/publications/documents/psw_gtr082/psw_gtr082.pdf\n",
+    "Citation: Cohen, JD and Deeming JE. 1985. The National Fire Danger Rating System: basic equations. Pacific Southwest Forest and Range Experiment Station, Berkeley, CA. \n",
+    "\n",
+    "Essentially the approach draws on regression equations developed by Simard (1968) on the basis of tables in the Wood Handbook (US Forest Products Laboratory 1955, revised 1974). EMC is expressed as a percent moisture content for dead fuel moisture.  \n",
+    "\n",
+    "The citation for Simard (1968) is: Simard AJ (1968). The moisture content of forest fuels I: A review of basic concepts. Ottawa, ONT: Forest Fire Research Institute, 1968. Rep. FF-X-14, 47p. "
    ]
   },
   {
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +77,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>RHobs</td>\n",
-       "      <td>derived from q</td>\n",
+       "      <td>derived from q (specific humidity)</td>\n",
        "      <td>#1. (specific humidity = mixing ratio)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -230,7 +240,7 @@
        "                  Source for my Algorithm  \\\n",
        "0                                   Input   \n",
        "1                                   Input   \n",
-       "2                          derived from q   \n",
+       "2      derived from q (specific humidity)   \n",
        "3                                 derived   \n",
        "4                                 derived   \n",
        "5                                    Tmin   \n",
@@ -280,7 +290,7 @@
        "23                                               none  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +306,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** METHOD **\n",
+    "** ASSUMPTIONS ** \n",
     "\n",
-    "The method used here is outlined in the National Fire Danger Rating system: basic equations article. It can be found here: http://www.fs.fed.us/psw/publications/documents/psw_gtr082/psw_gtr082.pdf\n",
-    "Citation: Cohen, JD and Deeming JE. 1985. The National Fire Danger Rating System: basic equations. Pacific Southwest Forest and Range Experiment Station, Berkeley, CA. \n",
+    "These are necessary because available archived data from Integrated Scenarios includes maximum and minimum temperature, specific humidity, and precipitation (and not relative humidity) for the historical and future periods. \n",
     "\n",
-    "Essentially the approach draws on regression equations developed by Simard (1968) on the basis of tables in the Wood Handbook (US Forest Products Laboratory 1955, revised 1974). EMC is expressed as a percent moisture content. \n",
-    "\n",
-    "The citation for Simard (1968) is: Simard AJ (1968). The moisture content of forest fuels I: A review of basic concepts. Ottawa, ONT: Forest Fire Research Institute, 1968. Rep. FF-X-14, 47p. \n",
-    "\n",
-    "\n"
+    "1. Relative Humidity (RH). Deriving RH from specific humidity (approximating the mixing ratio w as q, the specific humidity). \n",
+    "2. Climate class. The National Fire Danger Rating System (NFDRS) method uses climate class to approximate a precipitation rate, which is 0.25 in/hr for climate classes 1 and 2 and 0.05 in/hr for climate classes 3 and 4. It is very ambiguous from the NFDRS method how grid cells are assigned climate classes. However, the amount of variability in daily DFM is very dependent on the choice of climate class. The precip rate (from the climate class) is then used to determine the precip duration, which cannot exceed 8 hours if this method is used. \n",
+    "3. Saturation vapor pressure (SATVPD). Using saturation vapor pressure evaluated at the average simulated daily temperature (average of Tmin and Tmax) rather than observed temperature (dry-bulb temperature of afternoon observation time). \n",
+    "4. Ambient vapor pressure (AMBVP). Using daily RH (derived from q) rather than observed daily RH. \n",
+    "5. Equilibrium Moisture Content (EMC). Using Tmin for dew point temperature and RH (derived from q). "
    ]
   },
   {
@@ -355,9 +364,9 @@
    "source": [
     "** MY APPROACH ** \n",
     "\n",
-    "To understand how the algorithm for 100-hr DFM was performing, I imported 100-hr DFM data available through UI Metdata to compare with my algorithm for DFM. I compared for one gridcell located in the WA Cascades, with slightly different resolutions between the UI Metdata DFM (4 km) and Integrated Scenarios (6 km). I coded this up in Python (Ipython notebook available for reference) and did the comparison for one water year (1982). \n",
+    "To understand how the algorithm for 100-hr DFM was performing, I imported 100-hr DFM data for 1981 and 1982 available through UI Metdata from NKN (http://metdata.northwestknowledge.net/) to compare with my algorithm for DFM. I compared for one gridcell located in the WA Cascades, with slightly different resolutions between the UI Metdata DFM (4 km) and Integrated Scenarios (6 km). I coded this up in Python (Ipython notebook available for reference) and did the comparison for one water year (1982). \n",
     "\n",
-    "Initially, I compared results between the UI 100-hr DFM data and my algorithm for DFM using input data from Integrated Scenarios. \n",
+    "Initially, I compared results between the UI 100-hr DFM data and my algorithm for 100-hr DFM using archived data from Integrated Scenarios (tmin,tmax,specific humidity and precipitation). \n",
     "\n",
     "![100-hr DFM 1](dfm_comparison_uidfm_is.png) \n",
     "\n",
@@ -368,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since there was a low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach with IS inputs), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the IS data inputs. \n",
+    "Since there was a low correlation between UI Metdata DFM and my 100-hr DFM algorithm (using the NFDRS approach with IS archived data as inputs), I attempted to isolate the differences by downloading UI Metdata inputs and using those instead of the daily IS data. \n",
     "\n",
     "![100-hr DFM 2](dfm_comparison_uidfm_nfdrsui.png)\n",
     "\n",
@@ -400,10 +409,20 @@
    "metadata": {},
    "source": [
     "** ISSUES TO FLAG ** \n",
-    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. For example, if the climate class is changed to class 3, and precip rate is 0.05 in/hr (instead of 0.25 in/hr as used here), the variability changes dramatically (see figure below). ![100-hr DFM 6](dfm_comparison_one_gridcell_climclass3.png) However, the correlations are much lower; the maximum correlation from above (UI Metdata DFM compared with my algorithm using UI Metdata inputs with RH) is only 0.60. \n",
+    "1. Variability is very sensitive to WETRAT (precip rate in in/hr). This is dependent on the climate class. Although variability is smaller for the climate class used here (2), the correlations are higher. For example, if the climate class is changed to class 3, and precip rate is 0.05 in/hr (instead of 0.25 in/hr as used here), the variability changes dramatically (compare to magnitude of DFM in figure above). ![100-hr DFM 6](dfm_comparison_one_gridcell_climclass3.png) However, the correlations are much lower; the maximum correlation from above (UI Metdata DFM compared with my algorithm using UI Metdata inputs with RH) is only 0.60. \n",
+    "Additionally, the climate class system used by the NFDRS is also ambiguous and it would be great to get feedback on what was used to decide climate classification for the UI Metdata DFM data. \n",
     "2. The correlation improves when UI Metdata Inputs with RHmin and RHmax are used. This highlights possible problems with my estimation of RH. Additionally, there are times when RH > 100 in my algorithm, which obviously doesn't make sense. \n",
     "3. EMC values for my algorithm do seem a bit high based on the literature, but this might not be unreasonable. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
