most recent version after cleaning up a bit more

--- a/calc_dfm_gridcell_john.ipynb
+++ b/calc_dfm_gridcell_john.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -488,7 +488,7 @@
     "     'julian_day':julians,'fm100':fm100[0,:],'fm1000':fm1000[0,:]}\n",
     "df_for_csv = pd.DataFrame(data=d)\n",
     "df_for_csv\n",
-    "df_for_csv.to_csv('/raid/gergel/csv_for_john')"
+    "df_for_csv.to_csv('/raid/gergel/csv_for_john.csv')"
    ]
   },
   {
