added comments to make code more readable

--- a/calc_dfm_gridcell_john.ipynb
+++ b/calc_dfm_gridcell_john.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORT DATA FROM UI METDATA SITE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -100,6 +107,13 @@
     "\n",
     "del tmax_full, q_full,pr_full,rhmin_full,rhmax_full\n",
     "gc.collect() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "100-hr and 1000-hr DFM FUNCTION "
    ]
   },
   {
@@ -222,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORT BETA VALUES AND APPLY EMPIRICAL TRANSFORM "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 141,
    "metadata": {
@@ -242,6 +263,13 @@
     "pptdur_calc_df = pptamt_in['precipitation_amount'].to_series().map(lambda x: int(24 * (1 - (np.exp(-beta['pdur']*x)))) \n",
     "                                                            if (x > 0) else 0) \n",
     "pptdur = xray.DataArray.from_series(pptdur_calc_df).to_dataset()['precipitation_amount'].values[0,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ITERATE AND CALCULATE 100-HR AND 1000-HR DFM"
    ]
   },
   {
@@ -269,6 +297,13 @@
     "    tmois,fm1000[0,day],fm100[0,day],bv = calc_fm100_fm1000(pptdur[day],rhmax[day],rhmin[day],tmax[day],tmin[day],\n",
     "                                                            48,tmois,bv,julians[day],ymc)\n",
     "    ymc=fm100[0,day]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORT UI METDATA SITE DFM"
    ]
   },
   {
@@ -314,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA FROM JOHN "
+    "IMPORT DATA FROM JOHN "
    ]
   },
   {
@@ -345,6 +380,13 @@
     "        bool_arr[i] = True\n",
     "dfm_john = ds_sel.squeeze()[bool_arr]\n",
     "dfm1000_john = dss['f1000'][start:end].squeeze()[bool_arr]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PLOT AND COMPARE RESULTS"
    ]
   },
   {
@@ -474,6 +516,13 @@
     "savepath = os.path.join(direc, plotname)\n",
     "print (\"saving figure to '%s'\" % savepath)\n",
     "plt.savefig(savepath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WRITE TO CSV FILE"
    ]
   },
   {
